It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Tue, Oct 20, 2009
---------------------------------------------------------------------
- Added Language option stubs to user's profile.
- Disabled tab highlighting when showing user's profile.

Sun, Oct 18, 2009
---------------------------------------------------------------------
- Merged localization commits onto i18n branch (thanks, Lana!)

Wed, Oct 14, 2009
---------------------------------------------------------------------
- Make sure opportunity name does not exceed 64 characters (thanks, Rit!)
- Changed required Rails version to v2.3.4
- Updated model annotations for schema version #023.
- Release 0.9.8.

Sun, Oct 11, 2009
---------------------------------------------------------------------
- Added full support for deploying Fat Free CRM in subdirectory (see config/settings.yml).
- Made Facebox library work with the project is deployed in subdirectory.

Sat, Oct 10, 2009
---------------------------------------------------------------------
- Happy birthday, Diana!
- Setting up Apache with the latest Passenger.

Fri, Oct 9, 2009
---------------------------------------------------------------------
- Prevent multiple form submissions by pressing [Submit] button twice.
- Fixed apparent MySQL migration error on Windows/XP.

Wed, Oct 7, 2009
---------------------------------------------------------------------
- Moved [uses_user_permission] code from plugin to core library.
- Added inspector logging.

Mon, Oct 5, 2009
---------------------------------------------------------------------
- Added [rake crm:hooks] task that enumerates the hooks (thanks, Eric!)

Sat, Oct 3, 2009
---------------------------------------------------------------------
- Removed [uses_mysql_uuid] plugin and deprecated support for UUIDs.

Tue, Sep 29, 2009