@@ -1,0 +1,93 @@
+en-US:
+
+  language: English
+
+  # Views - hierarchy follows project view structure
+  # users:
+  user: User
+  email: Email
+  phone: Phone
+  mobile: Mobile
+  profile: Profile
+  my: My
+  edit_profile_link: Edit profile
+  upload_picture_link: Upload picture
+  change_password_link: Change password
+  change_password_button: Change Password
+  current_password: Current password
+  new_password: New password
+  password_confirmation: Confirm new password
+  first_name: First name
+  last_name: Last name
+  job_title: Title
+  company: Company
+  contact_info_title: Contact Information
+  alt_email: Alternative email
+  aim: AOL IM
+  yahoo: Yahoo IM
+  google: Google IM
+  skype: Skype
+  save_profile_button: Save Profile
+  image_help: The image file you upload will be automatically resized to 75 x 75 pixels. Supported formats are GIF, JPG, and PNG.
+  image_file: Image file
+  use_gravatar_link: Use Gravatar
+  gravatar_help: Not familiar with Gravatars? Learn about Gravatars
+  here: here
+  upload_picture_button: Upload Picture
+  login_now_link: Login Now!
+  username: Username
+  password: Password
+  sign_up_button: Sign Up
+  sign_up_title: Sign Up
+  already_signed_up: Already signed up?
+
+  # auth:
+  login: Login
+  no_account: Do not have an account?
+  sign_up_now: Sign Up Now!
+  forgot_password: Forgot Password?
+  remember_me: Remember Me
+
+  # accounts:
+  accounts: Accounts
+  added: added
+  ago: ago
+  by: by
+  me: me
+  phone_small: phone
+  edit: Edit
+  delete: Delete
+  create_task_title: Tasks
+  create_contact_title: Contacts
+  create_opportunity_title: Opportunities
+  create_account_button: Create Account
+  save_account_button: Save Account
+  account_name: Account name
+  assigned_to: Assigned to
+  website: Website
+  phone_toll_free: Phone (toll-free)
+  fax: Fax
+  billing_address: Billing address
+  shipping_address: Shipping address
+  same_as_billing_link: same as billing
+  permissions_title: Permissions
+  account_permissions_intro: "By default only you will have access to the account. You can change account permissions later."
+  private_txt: Keep it private, do not share with others
+  public_txt: Share it with everyone
+  shared_txt: Share it with the following people
+    
+  inline:
+    contact: 
+      one: '1 contact'
+      other: '{{count}} contacts'
+    opportunity:
+      one: '1 opportunity'
+      other: '{{count}} opportunities'
+  
+  # home:
+     
+  # generic:
+    not_implemented: Not implemented yet.
+    
+
+  
