@@ -1,92 +1,0 @@
-ru:
-
-   # Views - hierarchy follows project view structure
-   # users:
-    user: Пользователь
-    email: E-mail
-    phone: Телефон
-    mobile: Мобильный
-    profile: Профиль
-    my: Мой
-    edit_profile_link: Изменить профиль
-    upload_picture_link: Загрузить фото
-    change_password_link: Изменить пароль
-    change_password_button: Изменить Пароль
-    current_password: Текущий пароль
-    new_password: Новый пароль
-    password_confirmation: Повторить пароль
-    first_name: Имя
-    last_name: Фамилия
-    job_title: Должность
-    company: Организация
-    contact_info_title: Контактная Информация
-    alt_email: Альтернативный E-mail
-    aim: AOL IM
-    yahoo: Yahoo IM
-    google: Google IM
-    skype: Skype
-    save_profile_button: Сохранить Профиль
-    image_help: 'Размер изображения будет автоматически изменен на 75 x 75 пикселей. Поддерживаются форматы: GIF, JPG и PNG.'
-    image_file: Файл с Изображением
-    use_gravatar_link: Использовать Gravatar
-    gravatar_help: Не знаете что такое Gravatar? Почитать про Gravatar
-    here: здесь
-    upload_picture_button: Загрузить Изображение
-    login_now_link: Войти!
-    username: Логин
-    password: Пароль
-    sign_up_button: Зарегистрироваться
-    sign_up_title: Регистрация
-    already_signed_up: Уже регистрировались?
-
-#  auth:
-    login: Вход
-    no_account: Не зарегистрированы?
-    sign_up_now: Зарегистрироваться!
-    forgot_password: Забыли пароль?
-    remember_me: Запомнить
-
-  # accounts:
-    accounts: @ru@Accounts
-    added: добавлен
-    ago: назад
-    by: ' '
-    me: мной
-    phone_small: @ru@phone
-    edit: @ru@Edit
-    delete: @ru@Delete
-    create_task_title: @ru@Tasks
-    create_contact_title: @ru@Contacts
-    create_opportunity_title: @ru@Opportunities
-    create_account_button: @ru@Create Account
-    save_account_button: @ru@Save Account
-    account_name: @ru@Account name
-    assigned_to: @ru@Assigned to
-    website: @ru@Website 
-    phone_toll_free: @ru@Phone (toll-free)
-    fax: @ru@Fax
-    billing_address: @ru@Billing address
-    shipping_address: @ru@Shipping address
-    same_as_billing_link: @ru@same as billing
-    permissions_title: @ru@Permissions
-    account_permissions_intro: @ru@"By default only you will have access to the account. You can change account permissions later."
-    private_txt: @ru@Keep it private, do not share with others
-    public_txt: @ru@Share it with everyone
-    shared_txt: @ru@Share it with the following people
-
-    inline:
-      contact:
-        zero: '0 контактов'
-        one: '1 контакт'
-        many: '{{count}} контактов'
-        other: '{{count}} контакта'
-      opportunity:
-        zero: '0 возможностей'
-        one: '1 возможность'
-        few: '{{count}} возможности'
-        many: '{{count}} возможностей'
-        other: '{{count}} возможностй'
-
-#  generic:
-    not_implemented: @@@Not implemented yet.
-
