@@ -64,6 +64,3 @@ module FatFreeCRM
 
   end # module Callback
 end # module FatFreeCRM
-
-ActionView::Base.send(:include, FatFreeCRM::Callback::Helper)
-ActionController::Base.send(:include, FatFreeCRM::Callback::Helper)
